--- a/exam-cam-calc/Application/Calculator/View/Base.lproj/Main.storyboard
+++ b/exam-cam-calc/Application/Calculator/View/Base.lproj/Main.storyboard
@@ -18,6 +18,8 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uFY-Nc-WUU">
                                 <rect key="frame" x="174.5" y="815" width="65" height="31"/>
+                                <color key="backgroundColor" red="0.25098039220000001" green="0.30321850420000002" blue="0.69411764710000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Begin!"/>
                                 <connections>
